lab1/Test/L1-A-3-55.output
Error Type A at Line 2
Error Type A at Line 14
Error Type B at Line 21
Error Type B at Line 22
Error Type B at Line 23
Error Type A at Line 23
Error Type A at Line 26
Error Type A at Line 29
Error Type B at Line 32
Error Type B at Line 35
